# rust-kbuild

./: .gitignore  COMPLETION_SUMMARY.md  Cargo.toml  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SECURITY_SUMMARY.md  TUI_DEMO.md  UI_SCREENSHOT.txt
benches/: parser_bench.rs
docs/: API.md  USAGE.md
examples/sample_project/arch/arm/: Kconfig
examples/sample_project/kernel/: Kconfig
src/: lib.rs  main.rs
src/cli/: commands.rs  menuconfig.rs  mod.rs  saveconfig.rs
src/config/: generator.rs  mod.rs  reader.rs  writer.rs
src/kconfig/: lexer.rs  parser.rs  symbol.rs
src/ui/: app.rs  dependency_resolver.rs  mod.rs
src/ui/state/: mod.rs
tests/: config_tests.rs  dependency_tests.rs  integration_tests.rs  lexer_tests.rs  parser_tests.rs  source_tests.rs  ui_tests.rs
tests/fixtures/basic/: expected.config
