[package]
name = "rust-kbuild"
version = "0.1.0"
edition = "2021"
authors = ["guoweikang"]
description = "Rust implementation of kbuild-standalone (Kconfig and Kbuild)"
license = "GPL-2.0"
repository = "https://github.com/guoweikang/rust-kbuild"
readme = "README.md"
keywords = ["kconfig", "kbuild", "kernel", "build-system"]
categories = ["development-tools::build-utils", "parsing"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
lazy_static = "1.4"
ratatui = "0.26"       # for TUI menuconfig
crossterm = "0.27"     # terminal manipulation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"
pretty_assertions = "1.4"
proptest = "1.4"

[[bin]]
name = "rkconf"
path = "src/main.rs"

[[bench]]
name = "parser_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
